force-app/main/default/objects/smagicinteract__ContentType__c/smagicinteract__ContentType__c.object-meta.xml
<CustomObject>
    <description>Record and maintain consent specifically bound to different type of messages the user&apos;s want to receive (eg. Promotion, Product, Updates etc.)</description>
    <label>Content Type</label>
    <nameField>
        <label>Content Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Content Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>