force-app/main/default/objects/smagicinteract__ContentType__c/fields/smagicinteract__Allowed_Message_Count__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Allowed_Message_Count__c</fullName>
    <label>Allowed Message Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>