force-app/main/default/objects/smagicinteract__ContentType__c/fields/smagicinteract__AppendDisclaimer__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__AppendDisclaimer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox to decide whether the disclaimer need to be appended or not.</description>
    <inlineHelpText>Append disclaimer if &apos;Checked&apos;(true) else don&apos;t.</inlineHelpText>
    <label>AppendDisclaimer</label>
    <type>Checkbox</type>
</CustomField>