force-app/main/default/objects/smagicinteract__ContentType__c/fields/smagicinteract__Consent_Mode__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Consent_Mode__c</fullName>
    <description>Pick-list of applicable consent modes(Required/Not required/Not applicable).</description>
    <label>Consent Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
                <label>Consent Not Applicable</label>
            </value>
            <value>
                <fullName>Required</fullName>
                <label>Consent Required</label>
            </value>
            <value>
                <fullName>Not Required</fullName>
                <label>Consent Not Required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>