force-app/main/default/objects/smagicinteract__ContentType__c/fields/smagicinteract__Incoming_Sender_Id__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Incoming_Sender_Id__c</fullName>
    <description>Incoming senderId on which consent is to be recorded.</description>
    <label>Incoming Sender Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>