force-app/main/default/objects/smagicinteract__ContentType__c/fields/smagicinteract__Interface_Category__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Interface_Category__c</fullName>
    <description>Pick-list to store the interface category(Single/Bulk/Automated). This defines the applicable sources for content type.</description>
    <label>Interface Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUTOMATION</fullName>
                <label>Automated Conversations</label>
            </value>
            <value>
                <fullName>BULK</fullName>
                <label>Bulk Conversations</label>
            </value>
            <value>
                <fullName>SINGLE</fullName>
                <label>Interactive Conversations</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>