force-app/main/default/objects/smagicinteract__ContentType__c/fields/smagicinteract__Is_Message_Limit_Enabled__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Is_Message_Limit_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Message Limit Enabled</label>
    <type>Checkbox</type>
</CustomField>