force-app/main/default/objects/smagicinteract__ContentType__c/fields/smagicinteract__isContentTypeEnabled__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__isContentTypeEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to toggle the status of content type from enabled to disabled and vice a versa</description>
    <label>isContentTypeEnabled</label>
    <type>Checkbox</type>
</CustomField>