force-app/main/default/objects/smagicinteract__ContentType__c/fields/smagicinteract__Message_Limit_Fequency__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Message_Limit_Fequency__c</fullName>
    <label>Message Limit Fequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Message Per Day</fullName>
            </value>
            <value>
                <fullName>Message Per Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>