force-app/main/default/objects/smagicinteract__ContentType__c/fields/smagicinteract__OptOutDisclaimer__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__OptOutDisclaimer__c</fullName>
    <description>Opt-out instruction to be displayed at regular intervals to the users to be stored here.</description>
    <inlineHelpText>Recurring-messaging programs must also display opt-out instructions at regular intervals, whether in content or service messages, at least once per month.</inlineHelpText>
    <label>OptOutDisclaimer</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>