force-app/main/default/objects/smagicinteract__ContentType__c/fields/smagicinteract__OptOutDisclaimerInterval__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__OptOutDisclaimerInterval__c</fullName>
    <description>Number of days after which the disclaimer needs to be auto appended to be stored here.</description>
    <inlineHelpText>Auto append in an Interval of n Days.</inlineHelpText>
    <label>OptOutDisclaimerInterval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>