force-app/main/default/objects/smagicinteract__ContentType__c/fields/smagicinteract__Use_Consent_Expiry_Content_Type__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Use_Consent_Expiry_Content_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to determine whether to use consent expiry feature for content type or not.</description>
    <label>Use Consent Expiry Content Type</label>
    <type>Checkbox</type>
</CustomField>